# Applying-Deep-Neural-Networks-for-Fluid-Mechanics-Problems

./: README.md
Methods/Method_1/: render.py  run_predict.py  run_predict_2D.py  test.py  test2.py  test2d.py  test3.py  test_new.py  train.py
Methods/Method_2/: build.py  config.py  model.py  predict.py  prepare.py  render.py  run_predict.py  tools.py  train.py
Methods/Method_3/: 3drender.py  learned_simulator.py  make.sh  multiple_train.sh  noise_utils.py  render_rollout.py  run.sh  test.sh  train.py  train.sh  train_validate_rollout.sh  validate.sh
Methods/scripts/: generate
SimulatorGenerator/: CMakeLists.txt
SimulatorGenerator/SPlisHSPlasH/: TimeStep.cpp  TimeStep.h
SimulatorGenerator/SPlisHSPlasH/DFSPH/: TimeStepDFSPH.cpp
SimulatorGenerator/SPlisHSPlasH/IISPH/: TimeStepIISPH.cpp
SimulatorGenerator/Simulator/: SimulatorBase.cpp  SimulatorBase.h  main.cpp
SimulatorGenerator/Utilities/: CMakeLists.txt  Version.h
SimulatorGenerator/data/Scenes/: DAMBREAK_DFSPH_OLD.json  DamBreakModel_2D.json  DamBreak_DFSPH.json  DamBreak_DFSPH_BIG_NOTENSION.json  DamBreak_DFSPH_BIG_TENSION.json  DamBreak_DFSPH_END.json  DamBreak_DFSPH_MINI.json  DamBreak_DFSPH_NEW.json  DamBreak_DFSPH_NEW_MODEL_NO_SURFACE_TENSION.json  DamBreak_DFSPH_ORIGINAL.json  DamBreak_IISPH.json  DamBreak_IISPH_NEW.json  Motor.json
SimulatorGenerator/data/Scenes/Others/: DamBreak.json  DamBreak4.json  DamBreak5.json
SimulatorGenerator/data/Scenes2/: Bunny_vs_Dragon.json  DamBreakModel.json  DamBreakModelDragons.json  DamBreakWithObjects.json  DoubleDamBreak.json  DoubleDamBreakWithSphere.json  MotorScene.json  MotorScene2.json  MultiPhaseColoring.json  Obstacle.json  SurfaceTension_BreakDamZR2020.json  test.json  testbunny.json
SimulatorGenerator/simu/SPlisHSPlasH/: TimeStep.cpp  TimeStep.h
SimulatorGenerator/simu/SPlisHSPlasH/DFSPH/: TimeStepDFSPH.cpp
SimulatorGenerator/simu/Simulator/: CMakeLists.txt  ScriptObject.cpp  SimulatorBase.cpp
SimulatorGenerator/simu/Simulator/PositionBasedDynamicsWrapper/: PBDBoundarySimulator.cpp
SimulatorGenerator/simu/data/AnotherScenes/: Bunny_vs_Dragon.json  DamBreakWithObjects.json
SimulatorGenerator/simu/data/AnotherScenes/Cache/: Dragon_50k_sb_0.025_1_1_1_m0.bgeo  Dragon_50k_sb_vm_0.025_s1_1_1_r20_20_20_i0_t0.cdm  UnitBox_db_0.025_1.5_6_1.5_m0.bgeo  UnitBox_db_0.025_3_6_1.5_m0.bgeo  UnitBox_db_0.025_3_9_1.5_m0.bgeo  UnitBox_sb_0.025_0.1_0.1_0.1_m0.bgeo  UnitBox_sb_0.025_0.5_0.5_0.5_m0.bgeo  UnitBox_sb_0.025_0.7_0.7_0.7_m0.bgeo  UnitBox_sb_0.025_6_4_3_m0.bgeo  UnitBox_sb_0.025_6_6_3_m0.bgeo  UnitBox_sb_0.025_6_6_6_m0.bgeo  cylinder_db_0.025_0.1_0.5_0.1_m0.bgeo  cylinder_db_vm_0.025_s0.1_0.5_0.1_r20_20_20_i0_t0.cdm  sphere_db_0.025_0.2_0.2_0.2_m0.bgeo  sphere_db_vm_0.025_s0.2_0.2_0.2_r20_20_20_i0_t0.cdm  torus_db_0.025_0.2_0.2_0.2_m0.bgeo  torus_db_vm_0.025_s0.2_0.2_0.2_r20_20_20_i0_t0.cdm
SimulatorGenerator/simu/data/Scenes/: DamBreak_DFSPH_Adv.json  DamBreak_IISPH.json
SimulatorGenerator/simu/data/Scenes/Cache/: UnitBox_db_0.025_0.2_0.2_0.2_m0.bgeo  UnitBox_db_0.025_0.4_0.4_0.4_m0.bgeo  UnitBox_db_0.025_3_3_1.5_m0.bgeo  UnitBox_sb_0.025_0.4_0.4_0.4_m0.bgeo  UnitBox_sb_0.025_3_1.5_3_m0.bgeo  UnitBox_sb_0.025_3_3_1.5_m0.bgeo  cylinder_db_0.025_0.1_0.5_0.1_m0.bgeo  (+4 more)
(+1 files in other folders)
